# GitNDKTest2

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zhouwenguang/hz/gitndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-lib2.c
app/src/main/java/com/zhouwenguang/hz/gitndktest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhouwenguang/hz/gitndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jnidemo/: CMakeLists.txt  build.gradle
jnidemo/src/androidTest/java/com/zhouwenguang/hz/jnidemo/: ExampleInstrumentedTest.java
jnidemo/src/main/: AndroidManifest.xml
jnidemo/src/main/cpp/: native-lib.c  native-lib2.c
jnidemo/src/main/java/com/example/jnidemo/: MainActivity.java
jnidemo/src/main/java/com/zhouwenguang/hz/jnidemo/: MainActivity.java
jnidemo/src/test/java/com/zhouwenguang/hz/jnidemo/: ExampleUnitTest.java
soimport/: CMakeLists.txt  build.gradle
soimport/src/androidTest/java/com/example/soimport/: ExampleInstrumentedTest.java
soimport/src/main/: AndroidManifest.xml
soimport/src/main/java/com/baidu/so/: JniUtil.java
soimport/src/main/java/com/example/soimport/: MainActivity.java
soimport/src/main/res/values/: strings.xml
soimport/src/test/java/com/example/soimport/: ExampleUnitTest.java
